# rexis

./: CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: publish-crates.yml
crates/rexis/: Cargo.toml  README.md
crates/rexis-graph/: Cargo.toml
crates/rexis-graph/examples/: agent_memory_demo.rs  rrag_agent_integration.rs
crates/rexis-graph/src/: core.rs  execution.rs  lib.rs  observability.rs  prelude.rs
crates/rexis-graph/src/nodes/: agent.rs
crates/rexis-llm/: Cargo.toml
crates/rexis-llm/examples/: ollama_url_test.rs  openai_compatibility_test.rs
crates/rexis-llm/src/: lib.rs
crates/rexis-macros/: Cargo.toml
crates/rexis-rag/: Cargo.toml
crates/rexis-rag/examples/: advanced_memory_features.rs  storage_demo.rs
crates/rexis-rag/src/: error.rs  lib.rs  system.rs
crates/rexis-rag/src/agent/: agent.rs  builder.rs  executor.rs  legacy_memory.rs  mod.rs
crates/rexis-rag/src/agent/memory/: compression.rs  config.rs  conversation.rs  episodic.rs  manager.rs  mod.rs  semantic.rs  shared.rs  vector.rs  working.rs
crates/rexis-rag/src/graph_retrieval/: builder.rs
crates/rexis/src/: lib.rs
crates/rrag/src/agent/: agent.rs  builder.rs  legacy_memory.rs
crates/rrag/src/agent/memory/: conversation.rs  episodic.rs  manager.rs  mod.rs  semantic.rs
crates/rrag/src/storage/: memory.rs
examples/: Cargo.toml  advanced_reranking_demo.rs  agent_demo.rs  caching_performance_demo.rs  evaluation_demo.rs  getting_started_guide.rs  graph_retrieval_demo.rs  hybrid_search_demo.rs  incremental_indexing_demo.rs  multimodal_rag_demo.rs  observability_dashboard_demo.rs  production_deployment_demo.rs  query_processing_demo.rs  rgraph_demo.rs  rrag_comprehensive.rs  rrag_integration_demo.rs  rrag_rsllm_integration.rs  simple_agent.rs  simple_observability_demo.rs  test_ollama_integration.rs
