[package]
name = "rexis-graph"
version = "0.1.0"
edition = "2021"
authors = ["vasanth <vasanth@0xteam.io>"]
license = "MIT"
description = "Rexis Graph - Graph-based agent orchestration with hybrid state management and memory integration"
homepage = "https://github.com/0xteamhq/rexis"
repository = "https://github.com/0xteamhq/rexis"
documentation = "https://docs.rs/rexis-graph"
keywords = ["agents", "graph", "workflow", "orchestration", "rexis"]
categories = ["algorithms", "data-structures", "development-tools"]
readme = "README.md"

[features]
default = ["serde", "rexis-rag-integration"]
serde = ["dep:serde", "dep:serde_json"]
rexis-rag-integration = ["dep:rexis-rag"]
observability = ["dep:tracing", "dep:metrics"]
persistence = ["dep:sqlx"]

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Optional dependencies for features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rexis-rag = { version = "0.1.0", path = "../rexis-rag", optional = true }
tracing = { workspace = true, optional = true }
metrics = { version = "0.22", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"], optional = true }

# Graph and state management
petgraph = "0.6"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tracing-subscriber = { workspace = true }