[package]
name = "rexis-macros"
version = "0.1.0"
edition = "2021"
authors = ["vasanth <vasanth@0xteam.io>"]
license = "MIT"
repository = "https://github.com/0xteamhq/rexis"
homepage = "https://github.com/0xteamhq/rexis/tree/main/crates/rexis-macros"
documentation = "https://docs.rs/rexis-macros"
description = "Procedural macros for Rexis LLM tool calling"
keywords = ["llm", "ai", "macros", "tools", "rexis"]

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# For string case conversion
convert_case = "0.6"
